val.output
Grammar

    0 $accept: prog $end

    1 prog: stmts

    2 stmts: %empty
    3      | statement SEMICOLON stmts
    4      | statement VIRGULA stmts
    5      | SEMICOLON stmts

    6 statement: expression
    7          | VAR '=' expression
    8          | OTHER

    9 expression: VAR
   10           | expression '+' expression
   11           | expression '-' expression
   12           | INCREMENT expression
   13           | DECREMENT expression
   14           | SIMBOL_PUTERE expression
   15           | SIMBOL_APROXIMARE expression
   16           | expression '*' CINT
   17           | expression '/' CINT
   18           | expression '#' CINT
   19           | expression EQUAL expression
   20           | expression NOTEQUAL expression
   21           | expression GREATER expression
   22           | expression LESS expression
   23           | expression GREATEREQUAL expression
   24           | expression LESSEQUAL expression
   25           | '(' expression ')'
   26           | STRING


Terminals, with rules where they appear

$end (0) 0
'#' (35) 18
'(' (40) 25
')' (41) 25
'*' (42) 16
'+' (43) 10
'-' (45) 11
'/' (47) 17
'=' (61) 7
error (256)
VAR <intval> (258) 7 9
CINT <intval> (259) 16 17 18
STRING <strval> (260) 26
EQUAL (261) 19
NOTEQUAL (262) 20
GREATER (263) 21
LESS (264) 22
GREATEREQUAL (265) 23
LESSEQUAL (266) 24
DECREMENT (267) 13
INCREMENT (268) 12
SIMBOL_PUTERE (269) 14
SIMBOL_APROXIMARE (270) 15
VIRGULA (271) 4
SEMICOLON (272) 3 5
OTHER (273) 8


Nonterminals, with rules where they appear

$accept (27)
    on left: 0
prog (28)
    on left: 1, on right: 0
stmts (29)
    on left: 2 3 4 5, on right: 1 3 4 5
statement (30)
    on left: 6 7 8, on right: 3 4
expression <strval> (31)
    on left: 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26,
    on right: 6 7 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25


State 0

    0 $accept: . prog $end

    VAR                shift, and go to state 1
    STRING             shift, and go to state 2
    DECREMENT          shift, and go to state 3
    INCREMENT          shift, and go to state 4
    SIMBOL_PUTERE      shift, and go to state 5
    SIMBOL_APROXIMARE  shift, and go to state 6
    SEMICOLON          shift, and go to state 7
    OTHER              shift, and go to state 8
    '('                shift, and go to state 9

    $default  reduce using rule 2 (stmts)

    prog        go to state 10
    stmts       go to state 11
    statement   go to state 12
    expression  go to state 13


State 1

    7 statement: VAR . '=' expression
    9 expression: VAR .

    '='  shift, and go to state 14

    $default  reduce using rule 9 (expression)


State 2

   26 expression: STRING .

    $default  reduce using rule 26 (expression)


State 3

   13 expression: DECREMENT . expression

    VAR                shift, and go to state 15
    STRING             shift, and go to state 2
    DECREMENT          shift, and go to state 3
    INCREMENT          shift, and go to state 4
    SIMBOL_PUTERE      shift, and go to state 5
    SIMBOL_APROXIMARE  shift, and go to state 6
    '('                shift, and go to state 9

    expression  go to state 16


State 4

   12 expression: INCREMENT . expression

    VAR                shift, and go to state 15
    STRING             shift, and go to state 2
    DECREMENT          shift, and go to state 3
    INCREMENT          shift, and go to state 4
    SIMBOL_PUTERE      shift, and go to state 5
    SIMBOL_APROXIMARE  shift, and go to state 6
    '('                shift, and go to state 9

    expression  go to state 17


State 5

   14 expression: SIMBOL_PUTERE . expression

    VAR                shift, and go to state 15
    STRING             shift, and go to state 2
    DECREMENT          shift, and go to state 3
    INCREMENT          shift, and go to state 4
    SIMBOL_PUTERE      shift, and go to state 5
    SIMBOL_APROXIMARE  shift, and go to state 6
    '('                shift, and go to state 9

    expression  go to state 18


State 6

   15 expression: SIMBOL_APROXIMARE . expression

    VAR                shift, and go to state 15
    STRING             shift, and go to state 2
    DECREMENT          shift, and go to state 3
    INCREMENT          shift, and go to state 4
    SIMBOL_PUTERE      shift, and go to state 5
    SIMBOL_APROXIMARE  shift, and go to state 6
    '('                shift, and go to state 9

    expression  go to state 19


State 7

    5 stmts: SEMICOLON . stmts

    VAR                shift, and go to state 1
    STRING             shift, and go to state 2
    DECREMENT          shift, and go to state 3
    INCREMENT          shift, and go to state 4
    SIMBOL_PUTERE      shift, and go to state 5
    SIMBOL_APROXIMARE  shift, and go to state 6
    SEMICOLON          shift, and go to state 7
    OTHER              shift, and go to state 8
    '('                shift, and go to state 9

    $default  reduce using rule 2 (stmts)

    stmts       go to state 20
    statement   go to state 12
    expression  go to state 13


State 8

    8 statement: OTHER .

    $default  reduce using rule 8 (statement)


State 9

   25 expression: '(' . expression ')'

    VAR                shift, and go to state 15
    STRING             shift, and go to state 2
    DECREMENT          shift, and go to state 3
    INCREMENT          shift, and go to state 4
    SIMBOL_PUTERE      shift, and go to state 5
    SIMBOL_APROXIMARE  shift, and go to state 6
    '('                shift, and go to state 9

    expression  go to state 21


State 10

    0 $accept: prog . $end

    $end  shift, and go to state 22


State 11

    1 prog: stmts .

    $default  reduce using rule 1 (prog)


State 12

    3 stmts: statement . SEMICOLON stmts
    4      | statement . VIRGULA stmts

    VIRGULA    shift, and go to state 23
    SEMICOLON  shift, and go to state 24


State 13

    6 statement: expression .
   10 expression: expression . '+' expression
   11           | expression . '-' expression
   16           | expression . '*' CINT
   17           | expression . '/' CINT
   18           | expression . '#' CINT
   19           | expression . EQUAL expression
   20           | expression . NOTEQUAL expression
   21           | expression . GREATER expression
   22           | expression . LESS expression
   23           | expression . GREATEREQUAL expression
   24           | expression . LESSEQUAL expression

    EQUAL         shift, and go to state 25
    NOTEQUAL      shift, and go to state 26
    GREATER       shift, and go to state 27
    LESS          shift, and go to state 28
    GREATEREQUAL  shift, and go to state 29
    LESSEQUAL     shift, and go to state 30
    '+'           shift, and go to state 31
    '-'           shift, and go to state 32
    '*'           shift, and go to state 33
    '/'           shift, and go to state 34
    '#'           shift, and go to state 35

    $default  reduce using rule 6 (statement)


State 14

    7 statement: VAR '=' . expression

    VAR                shift, and go to state 15
    STRING             shift, and go to state 2
    DECREMENT          shift, and go to state 3
    INCREMENT          shift, and go to state 4
    SIMBOL_PUTERE      shift, and go to state 5
    SIMBOL_APROXIMARE  shift, and go to state 6
    '('                shift, and go to state 9

    expression  go to state 36


State 15

    9 expression: VAR .

    $default  reduce using rule 9 (expression)


State 16

   10 expression: expression . '+' expression
   11           | expression . '-' expression
   13           | DECREMENT expression .
   16           | expression . '*' CINT
   17           | expression . '/' CINT
   18           | expression . '#' CINT
   19           | expression . EQUAL expression
   20           | expression . NOTEQUAL expression
   21           | expression . GREATER expression
   22           | expression . LESS expression
   23           | expression . GREATEREQUAL expression
   24           | expression . LESSEQUAL expression

    $default  reduce using rule 13 (expression)


State 17

   10 expression: expression . '+' expression
   11           | expression . '-' expression
   12           | INCREMENT expression .
   16           | expression . '*' CINT
   17           | expression . '/' CINT
   18           | expression . '#' CINT
   19           | expression . EQUAL expression
   20           | expression . NOTEQUAL expression
   21           | expression . GREATER expression
   22           | expression . LESS expression
   23           | expression . GREATEREQUAL expression
   24           | expression . LESSEQUAL expression

    $default  reduce using rule 12 (expression)


State 18

   10 expression: expression . '+' expression
   11           | expression . '-' expression
   14           | SIMBOL_PUTERE expression .
   16           | expression . '*' CINT
   17           | expression . '/' CINT
   18           | expression . '#' CINT
   19           | expression . EQUAL expression
   20           | expression . NOTEQUAL expression
   21           | expression . GREATER expression
   22           | expression . LESS expression
   23           | expression . GREATEREQUAL expression
   24           | expression . LESSEQUAL expression

    $default  reduce using rule 14 (expression)


State 19

   10 expression: expression . '+' expression
   11           | expression . '-' expression
   15           | SIMBOL_APROXIMARE expression .
   16           | expression . '*' CINT
   17           | expression . '/' CINT
   18           | expression . '#' CINT
   19           | expression . EQUAL expression
   20           | expression . NOTEQUAL expression
   21           | expression . GREATER expression
   22           | expression . LESS expression
   23           | expression . GREATEREQUAL expression
   24           | expression . LESSEQUAL expression

    $default  reduce using rule 15 (expression)


State 20

    5 stmts: SEMICOLON stmts .

    $default  reduce using rule 5 (stmts)


State 21

   10 expression: expression . '+' expression
   11           | expression . '-' expression
   16           | expression . '*' CINT
   17           | expression . '/' CINT
   18           | expression . '#' CINT
   19           | expression . EQUAL expression
   20           | expression . NOTEQUAL expression
   21           | expression . GREATER expression
   22           | expression . LESS expression
   23           | expression . GREATEREQUAL expression
   24           | expression . LESSEQUAL expression
   25           | '(' expression . ')'

    EQUAL         shift, and go to state 25
    NOTEQUAL      shift, and go to state 26
    GREATER       shift, and go to state 27
    LESS          shift, and go to state 28
    GREATEREQUAL  shift, and go to state 29
    LESSEQUAL     shift, and go to state 30
    '+'           shift, and go to state 31
    '-'           shift, and go to state 32
    '*'           shift, and go to state 33
    '/'           shift, and go to state 34
    '#'           shift, and go to state 35
    ')'           shift, and go to state 37


State 22

    0 $accept: prog $end .

    $default  accept


State 23

    4 stmts: statement VIRGULA . stmts

    VAR                shift, and go to state 1
    STRING             shift, and go to state 2
    DECREMENT          shift, and go to state 3
    INCREMENT          shift, and go to state 4
    SIMBOL_PUTERE      shift, and go to state 5
    SIMBOL_APROXIMARE  shift, and go to state 6
    SEMICOLON          shift, and go to state 7
    OTHER              shift, and go to state 8
    '('                shift, and go to state 9

    $default  reduce using rule 2 (stmts)

    stmts       go to state 38
    statement   go to state 12
    expression  go to state 13


State 24

    3 stmts: statement SEMICOLON . stmts

    VAR                shift, and go to state 1
    STRING             shift, and go to state 2
    DECREMENT          shift, and go to state 3
    INCREMENT          shift, and go to state 4
    SIMBOL_PUTERE      shift, and go to state 5
    SIMBOL_APROXIMARE  shift, and go to state 6
    SEMICOLON          shift, and go to state 7
    OTHER              shift, and go to state 8
    '('                shift, and go to state 9

    $default  reduce using rule 2 (stmts)

    stmts       go to state 39
    statement   go to state 12
    expression  go to state 13


State 25

   19 expression: expression EQUAL . expression

    VAR                shift, and go to state 15
    STRING             shift, and go to state 2
    DECREMENT          shift, and go to state 3
    INCREMENT          shift, and go to state 4
    SIMBOL_PUTERE      shift, and go to state 5
    SIMBOL_APROXIMARE  shift, and go to state 6
    '('                shift, and go to state 9

    expression  go to state 40


State 26

   20 expression: expression NOTEQUAL . expression

    VAR                shift, and go to state 15
    STRING             shift, and go to state 2
    DECREMENT          shift, and go to state 3
    INCREMENT          shift, and go to state 4
    SIMBOL_PUTERE      shift, and go to state 5
    SIMBOL_APROXIMARE  shift, and go to state 6
    '('                shift, and go to state 9

    expression  go to state 41


State 27

   21 expression: expression GREATER . expression

    VAR                shift, and go to state 15
    STRING             shift, and go to state 2
    DECREMENT          shift, and go to state 3
    INCREMENT          shift, and go to state 4
    SIMBOL_PUTERE      shift, and go to state 5
    SIMBOL_APROXIMARE  shift, and go to state 6
    '('                shift, and go to state 9

    expression  go to state 42


State 28

   22 expression: expression LESS . expression

    VAR                shift, and go to state 15
    STRING             shift, and go to state 2
    DECREMENT          shift, and go to state 3
    INCREMENT          shift, and go to state 4
    SIMBOL_PUTERE      shift, and go to state 5
    SIMBOL_APROXIMARE  shift, and go to state 6
    '('                shift, and go to state 9

    expression  go to state 43


State 29

   23 expression: expression GREATEREQUAL . expression

    VAR                shift, and go to state 15
    STRING             shift, and go to state 2
    DECREMENT          shift, and go to state 3
    INCREMENT          shift, and go to state 4
    SIMBOL_PUTERE      shift, and go to state 5
    SIMBOL_APROXIMARE  shift, and go to state 6
    '('                shift, and go to state 9

    expression  go to state 44


State 30

   24 expression: expression LESSEQUAL . expression

    VAR                shift, and go to state 15
    STRING             shift, and go to state 2
    DECREMENT          shift, and go to state 3
    INCREMENT          shift, and go to state 4
    SIMBOL_PUTERE      shift, and go to state 5
    SIMBOL_APROXIMARE  shift, and go to state 6
    '('                shift, and go to state 9

    expression  go to state 45


State 31

   10 expression: expression '+' . expression

    VAR                shift, and go to state 15
    STRING             shift, and go to state 2
    DECREMENT          shift, and go to state 3
    INCREMENT          shift, and go to state 4
    SIMBOL_PUTERE      shift, and go to state 5
    SIMBOL_APROXIMARE  shift, and go to state 6
    '('                shift, and go to state 9

    expression  go to state 46


State 32

   11 expression: expression '-' . expression

    VAR                shift, and go to state 15
    STRING             shift, and go to state 2
    DECREMENT          shift, and go to state 3
    INCREMENT          shift, and go to state 4
    SIMBOL_PUTERE      shift, and go to state 5
    SIMBOL_APROXIMARE  shift, and go to state 6
    '('                shift, and go to state 9

    expression  go to state 47


State 33

   16 expression: expression '*' . CINT

    CINT  shift, and go to state 48


State 34

   17 expression: expression '/' . CINT

    CINT  shift, and go to state 49


State 35

   18 expression: expression '#' . CINT

    CINT  shift, and go to state 50


State 36

    7 statement: VAR '=' expression .
   10 expression: expression . '+' expression
   11           | expression . '-' expression
   16           | expression . '*' CINT
   17           | expression . '/' CINT
   18           | expression . '#' CINT
   19           | expression . EQUAL expression
   20           | expression . NOTEQUAL expression
   21           | expression . GREATER expression
   22           | expression . LESS expression
   23           | expression . GREATEREQUAL expression
   24           | expression . LESSEQUAL expression

    EQUAL         shift, and go to state 25
    NOTEQUAL      shift, and go to state 26
    GREATER       shift, and go to state 27
    LESS          shift, and go to state 28
    GREATEREQUAL  shift, and go to state 29
    LESSEQUAL     shift, and go to state 30
    '+'           shift, and go to state 31
    '-'           shift, and go to state 32
    '*'           shift, and go to state 33
    '/'           shift, and go to state 34
    '#'           shift, and go to state 35

    $default  reduce using rule 7 (statement)


State 37

   25 expression: '(' expression ')' .

    $default  reduce using rule 25 (expression)


State 38

    4 stmts: statement VIRGULA stmts .

    $default  reduce using rule 4 (stmts)


State 39

    3 stmts: statement SEMICOLON stmts .

    $default  reduce using rule 3 (stmts)


State 40

   10 expression: expression . '+' expression
   11           | expression . '-' expression
   16           | expression . '*' CINT
   17           | expression . '/' CINT
   18           | expression . '#' CINT
   19           | expression . EQUAL expression
   19           | expression EQUAL expression .
   20           | expression . NOTEQUAL expression
   21           | expression . GREATER expression
   22           | expression . LESS expression
   23           | expression . GREATEREQUAL expression
   24           | expression . LESSEQUAL expression

    EQUAL         shift, and go to state 25
    NOTEQUAL      shift, and go to state 26
    GREATER       shift, and go to state 27
    LESS          shift, and go to state 28
    GREATEREQUAL  shift, and go to state 29
    LESSEQUAL     shift, and go to state 30
    '+'           shift, and go to state 31
    '-'           shift, and go to state 32
    '*'           shift, and go to state 33
    '/'           shift, and go to state 34
    '#'           shift, and go to state 35

    $default  reduce using rule 19 (expression)


State 41

   10 expression: expression . '+' expression
   11           | expression . '-' expression
   16           | expression . '*' CINT
   17           | expression . '/' CINT
   18           | expression . '#' CINT
   19           | expression . EQUAL expression
   20           | expression . NOTEQUAL expression
   20           | expression NOTEQUAL expression .
   21           | expression . GREATER expression
   22           | expression . LESS expression
   23           | expression . GREATEREQUAL expression
   24           | expression . LESSEQUAL expression

    EQUAL         shift, and go to state 25
    NOTEQUAL      shift, and go to state 26
    GREATER       shift, and go to state 27
    LESS          shift, and go to state 28
    GREATEREQUAL  shift, and go to state 29
    LESSEQUAL     shift, and go to state 30
    '+'           shift, and go to state 31
    '-'           shift, and go to state 32
    '*'           shift, and go to state 33
    '/'           shift, and go to state 34
    '#'           shift, and go to state 35

    $default  reduce using rule 20 (expression)


State 42

   10 expression: expression . '+' expression
   11           | expression . '-' expression
   16           | expression . '*' CINT
   17           | expression . '/' CINT
   18           | expression . '#' CINT
   19           | expression . EQUAL expression
   20           | expression . NOTEQUAL expression
   21           | expression . GREATER expression
   21           | expression GREATER expression .
   22           | expression . LESS expression
   23           | expression . GREATEREQUAL expression
   24           | expression . LESSEQUAL expression

    EQUAL         shift, and go to state 25
    NOTEQUAL      shift, and go to state 26
    GREATER       shift, and go to state 27
    LESS          shift, and go to state 28
    GREATEREQUAL  shift, and go to state 29
    LESSEQUAL     shift, and go to state 30
    '+'           shift, and go to state 31
    '-'           shift, and go to state 32
    '*'           shift, and go to state 33
    '/'           shift, and go to state 34
    '#'           shift, and go to state 35

    $default  reduce using rule 21 (expression)


State 43

   10 expression: expression . '+' expression
   11           | expression . '-' expression
   16           | expression . '*' CINT
   17           | expression . '/' CINT
   18           | expression . '#' CINT
   19           | expression . EQUAL expression
   20           | expression . NOTEQUAL expression
   21           | expression . GREATER expression
   22           | expression . LESS expression
   22           | expression LESS expression .
   23           | expression . GREATEREQUAL expression
   24           | expression . LESSEQUAL expression

    EQUAL         shift, and go to state 25
    NOTEQUAL      shift, and go to state 26
    GREATER       shift, and go to state 27
    LESS          shift, and go to state 28
    GREATEREQUAL  shift, and go to state 29
    LESSEQUAL     shift, and go to state 30
    '+'           shift, and go to state 31
    '-'           shift, and go to state 32
    '*'           shift, and go to state 33
    '/'           shift, and go to state 34
    '#'           shift, and go to state 35

    $default  reduce using rule 22 (expression)


State 44

   10 expression: expression . '+' expression
   11           | expression . '-' expression
   16           | expression . '*' CINT
   17           | expression . '/' CINT
   18           | expression . '#' CINT
   19           | expression . EQUAL expression
   20           | expression . NOTEQUAL expression
   21           | expression . GREATER expression
   22           | expression . LESS expression
   23           | expression . GREATEREQUAL expression
   23           | expression GREATEREQUAL expression .
   24           | expression . LESSEQUAL expression

    EQUAL         shift, and go to state 25
    NOTEQUAL      shift, and go to state 26
    GREATER       shift, and go to state 27
    LESS          shift, and go to state 28
    GREATEREQUAL  shift, and go to state 29
    LESSEQUAL     shift, and go to state 30
    '+'           shift, and go to state 31
    '-'           shift, and go to state 32
    '*'           shift, and go to state 33
    '/'           shift, and go to state 34
    '#'           shift, and go to state 35

    $default  reduce using rule 23 (expression)


State 45

   10 expression: expression . '+' expression
   11           | expression . '-' expression
   16           | expression . '*' CINT
   17           | expression . '/' CINT
   18           | expression . '#' CINT
   19           | expression . EQUAL expression
   20           | expression . NOTEQUAL expression
   21           | expression . GREATER expression
   22           | expression . LESS expression
   23           | expression . GREATEREQUAL expression
   24           | expression . LESSEQUAL expression
   24           | expression LESSEQUAL expression .

    EQUAL         shift, and go to state 25
    NOTEQUAL      shift, and go to state 26
    GREATER       shift, and go to state 27
    LESS          shift, and go to state 28
    GREATEREQUAL  shift, and go to state 29
    LESSEQUAL     shift, and go to state 30
    '+'           shift, and go to state 31
    '-'           shift, and go to state 32
    '*'           shift, and go to state 33
    '/'           shift, and go to state 34
    '#'           shift, and go to state 35

    $default  reduce using rule 24 (expression)


State 46

   10 expression: expression . '+' expression
   10           | expression '+' expression .
   11           | expression . '-' expression
   16           | expression . '*' CINT
   17           | expression . '/' CINT
   18           | expression . '#' CINT
   19           | expression . EQUAL expression
   20           | expression . NOTEQUAL expression
   21           | expression . GREATER expression
   22           | expression . LESS expression
   23           | expression . GREATEREQUAL expression
   24           | expression . LESSEQUAL expression

    '*'  shift, and go to state 33
    '/'  shift, and go to state 34
    '#'  shift, and go to state 35

    $default  reduce using rule 10 (expression)


State 47

   10 expression: expression . '+' expression
   11           | expression . '-' expression
   11           | expression '-' expression .
   16           | expression . '*' CINT
   17           | expression . '/' CINT
   18           | expression . '#' CINT
   19           | expression . EQUAL expression
   20           | expression . NOTEQUAL expression
   21           | expression . GREATER expression
   22           | expression . LESS expression
   23           | expression . GREATEREQUAL expression
   24           | expression . LESSEQUAL expression

    '*'  shift, and go to state 33
    '/'  shift, and go to state 34
    '#'  shift, and go to state 35

    $default  reduce using rule 11 (expression)


State 48

   16 expression: expression '*' CINT .

    $default  reduce using rule 16 (expression)


State 49

   17 expression: expression '/' CINT .

    $default  reduce using rule 17 (expression)


State 50

   18 expression: expression '#' CINT .

    $default  reduce using rule 18 (expression)
